# Technopark_IZ2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
data/: data.txt
project/: main.c
project/include/: main.h  main.h.in
project/lib/: CMakeLists.txt
project/lib/coding_features/: CMakeLists.txt
project/lib/coding_features/src/: CodingFeatures.c
project/lib/consistent/: CMakeLists.txt
project/lib/consistent/include/: Errors.h
project/lib/consistent/src/: FileMapper.c
project/lib/parallel/: CMakeLists.txt
project/lib/parallel/include/: FileMapper.h
project/lib/parallel/src/: FileMapper.c  ProcessFunctions.c
project/src/: CMakeLists.txt
project/src/consistent/: CMakeLists.txt  Search.c
project/src/consistent/include/: FileMapper.h  Search.h
project/src/parallel/: CMakeLists.txt  FileMapper.c  ProcessFunctions.c
project/src/parallel/include/: Errors.h  FileMapper.h  ProcessFunctions.h
tests/: CMakeLists.txt
tests/data_for_tests/: file1.txt  file2.txt
tests/stress-test/: CMakeLists.txt  stress_test.c
tests/stress-test/data_for_stress_test/: file1.txt  file4.txt
tests/stress-test/include/: data_path.h
tests/stress-test/src/: ExeclArgsCreater.c  TimeItExecl.c
tests/unittests/: CMakeLists.txt  test_consistent.cpp  test_parallel.cpp
tests/unittests/src/: test_parallel.cpp
